--- a/catalog.html
+++ b/catalog.html
@@ -36,33 +36,27 @@
         <h2 class="minor-header-left">Инфраструктура:</h2>
         <label for="pool">Бассейн</label>
         <input type="checkbox" name="pool" id="pool" checked>
-        <br>
         <label for="parking">Парковка</label>
         <input type="checkbox" name="parking" id="parking">
-        <br>
         <label for="hotel">Wi-fi</label>
         <input type="checkbox" name="wi-fi" id="wi-fi">
         <h2 class="minor-header-right">Тип жилья:</h2>
         <label for="hotel">Гостиница</label>
         <input type="checkbox" name="hotel" id="hotel" checked>
-        <br>
         <label for="motel">Мотель</label>
         <input type="checkbox" name="motel" id="motel" checked>
-        <br>
         <label for="apartments">Апартаменты</label>
         <input type="checkbox" name="apartments" id="apartments" checked>
-        <br>
         <h2>Стоимость в сутки (р):</h2>
         <label for="price-in">От 0</label>
         <input type="range" name="price-from" id="price-in" min="0" max="10000" step="100" value="3000">
         <label for="price-out">До 3000</label>
         <input type="range" name="price-to" id="price-out" min="0" max="10000" step="100" value="0">
-        <br>
         <input type="submit" value="Показать">
       </form>
       <div class="search-result">
         <h3>Найдено: 3</h3>
-        <span>Сортировка:</span>
+        <span class="sorting-header">Сортировка:</span>
         <ul class= "sorting">
           <li>
             <a href="#">По цене</a>
@@ -82,29 +76,29 @@
       <div class="search-show">
         <article>
           <h3>Amara resort & spa</h3>
-          <p class="article-info">Гостиница</p>
-          <p class="article-info">От 4000 р.</p>
+          <div class="article-info">Гостиница</div>
+          <div class="article-info">От 4000 р.</div>
           <img class="article-img" src="img/hotel3.jpg" alt="Фото">
-          <a class="more-btn">Подробнее</a>
-          <a class="book-btn">Забронировать</a>
+          <a class="btn more-btn">Подробнее</a>
+          <a class="btn book-btn">Забронировать</a>
           <span class="rate">Рейтинг: 8,5</span>
         </article>
         <article>
           <h3>Desert quail inn</h3>
-          <p class="article-info">Мотель</p>
-          <p class="article-info">От 3000 р.</p>
+          <div class="article-info">Мотель</div>
+          <div class="article-info">От 3000 р.</div>
           <img class="article-img" src="img/hotel2.jpg" alt="Фото">
-          <a class="more-btn">Подробнее</a>
-          <a class="book-btn">Забронировать</a>
+          <a class="btn more-btn">Подробнее</a>
+          <a class="btn book-btn">Забронировать</a>
           <span class="rate">Рейтинг: 8,9</span>
         </article>
         <article>
           <h3>Villas at poco diablo</h3>
-          <p class="article-info">Апартаменты</p>
-          <p class="article-info">От 2000 р.</p>
+          <div class="article-info">Апартаменты</div>
+          <div class="article-info">От 2000 р.</div>
           <img class="article-img" src="img/hotel1.jpg" alt="Фото">
-          <a class="more-btn">Подробнее</a>
-          <a class="book-btn">Забронировать</a>
+          <a class="btn more-btn">Подробнее</a>
+          <a class="btn book-btn">Забронировать</a>
           <span class="rate">Рейтинг: 9,2</span>
         </article>
       </div>
