--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="reason-picture">
         <img src ="img/usaflag.jpg" alt="Город">
         <h4>Настоящий городок</h4>
-        <p class="picure-description">-№1-</p>
+        <div class="picure-description">-№1-</div>
         <p class="picure-description">Седона - не аттракцион для туристов, там течет своя жизнь</p>
       </div>
       <section class="reason-list">
@@ -64,23 +64,23 @@
       <div class="reason-picture">
         <h4>Там есть мост дьявола!</h4>
         <img src ="img/mountains.jpg" alt="Горы">
-        <p class="picure-description">-№2-</p>
+        <div class="picure-description">-№2-</div>
         <p class="picure-description">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
       </div>
       <section class="reason-list">
         <div class="reason-point">
           <h5>Небольшая площадь</h5>
-          <p>-№3-</p>
+          <div>-№3-</div>
           <p>Все достопримечательности находятся очень близко</p>
         </div>
         <div class="reason-pont">
           <h5>Красивая дорога</h5>
-          <p>-№4-</p>
+          <div>-№4-</div>
           <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </div>
         <div class="reason-point">
           <h5>Мало туристов</h5>
-          <p>-№5-</p>
+          <div>-№5-</div>
           <p>Большинство едет в Гранд Каньон и толпится там</p>
         </div>
       </section>
@@ -89,13 +89,11 @@
         <p class="to-do">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <div class="search-block">
           <h6>Поиск гостиницы в Седоне</h6>
-          <form action="#" method="post">
+          <form class="search-form" action="#" method="post">
             <label for="date-in">Дата заезда:</label>
             <input type="date" id="date-in" name="date-in"/>
-            <br>
             <label for="date-out">Дата выезда:</label>
             <input type="date" id="date-out" name="date-out"/>
-            <br>
             <label for="adults">Взрослые:</label>
             <input type="number" id="adults" name="adults" max="100" min="1" value="2">
             <label for="children">Дети:</label>
