--- a/catalog.html
+++ b/catalog.html
@@ -7,21 +7,20 @@
   </head>
   <body>
     <header class="main-header">
-      <div class="container">
+      <div class="layout-positioner">
         <nav class="main-navigation">
           <ul>
-            <li>
+            <li class="left-navigation">
               <a href="#">Информация</a>
             </li>
-            <li>
+            <li class="left-navigation">
               <a href="#">Фото и видео</a>
             </li>
-            <li>
+            <li class="right-navigation">
               <a href="#">Карта штата</a>
             </li>
-            <li>
+            <li class="right-navigation">
               <a href="#">Гостиницы</a>
-            </li>
           </ul>
         </nav>
         <div class="index-logo">
@@ -31,7 +30,7 @@
         </div>
       </div>
     </header>
-    <main class="container">
+    <main class="layout-positioner">
       <form class="search-form" action="#" method="post">
         <h2 class="minor-header-left">Инфраструктура:</h2>
         <label for="pool">Бассейн</label>
@@ -118,27 +117,29 @@
         </article>
       </div>
     </main>
-    <footer class="main-footer">
-      <section class="hashtag">
-        <h3>#Visitsedona</h3>
-      </section>
-      <section class="footer-social">
-        <a class="social-btn social-btn-twitter" href="#">
-          <img src="img/twitter.png" alt="Twitter">
-        </a>
-        <a class="social-btn social-btn-facebook" href="#">
-          <img src="img/facebook.png" alt="Facebook">
-        </a>
-        <a class="social-btn social-btn-youtube" href="#">
-          <img src="img/youtube.png" alt="Youtube">
-        </a>
-      </section>
-      <section class="footer-copyright">
-        <p class="html-academy">Website by</p>
-        <a class="btn" href="https://htmlacademy.ru">
-          <img src="img/htmlacademy.png" alt="HTML academy">
-        </a>
-      </section>
+    <footer class="layout-positioner">
+      <div class="footer-main">
+        <section class="hashtag">
+          <h3>#Visitsedona</h3>
+        </section>
+        <section class="footer-social">
+          <a class="social-btn social-btn-twitter" href="#">
+            <img src="img/twitter.png" alt="Twitter">
+          </a>
+          <a class="social-btn social-btn-facebook" href="#">
+            <img src="img/facebook.png" alt="Facebook">
+          </a>
+          <a class="social-btn social-btn-youtube" href="#">
+            <img src="img/youtube.png" alt="Youtube">
+          </a>
+        </section>
+        <section class="footer-copyright">
+          <span class="html-academy">Website by</span>
+          <a class="btn" href="https://htmlacademy.ru">
+            <img src="img/htmlacademy.png" alt="HTML academy">
+          </a>
+        </section>
+      </div>
     </footer>
   </body>
 </html>
