--- a/index.html
+++ b/index.html
@@ -75,18 +75,18 @@
             <img src ="img/mountains.jpg" alt="Горы">
           </div>
       </div>
-      <section class="reason-list">
-        <div class="reason-point">
+      <section class="reason-list1">
+        <div class="reason-point1">
           <h5>Небольшая площадь</h5>
           <div>-№3-</div>
           <p>Все достопримечательности находятся очень близко</p>
         </div>
-        <div class="reason-pont">
+        <div class="reason-point1">
           <h5>Красивая дорога</h5>
           <div>-№4-</div>
           <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </div>
-        <div class="reason-point">
+        <div class="reason-point1">
           <h5>Мало туристов</h5>
           <div>-№5-</div>
           <p>Большинство едет в Гранд Каньон и толпится там</p>
@@ -95,7 +95,8 @@
       <section class="if-interest">
         <span class="main-question">Заинтересовались?</span>
         <p class="to-do">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <div class="search-block">
+      </section>
+      <div class="search-block">
           <h6>Поиск гостиницы в Седоне</h6>
           <form class="search-form" action="#" method="post">
             <label for="date-in">Дата заезда:</label>
@@ -109,29 +110,30 @@
             <input type="submit" value="Найти">
           </form>
         </div>
-      </section>
     </main>
     <footer class="layout-positioner">
-      <section class="hashtag">
-        <h3>#Visitsedona</h3>
-      </section>
-      <section class="footer-social">
-        <a class="social-btn social-btn-twitter" href="#">
-          <img src="img/twitter.png" alt="Twitter">
-        </a>
-        <a class="social-btn social-btn-facebook" href="#">
-          <img src="img/facebook.png" alt="Facebook">
-        </a>
-        <a class="social-btn social-btn-youtube" href="#">
-          <img src="img/youtube.png" alt="Youtube">
-        </a>
-      </section>
-      <section class="footer-copyright">
-        <p class="html-academy">Website by</p>
-        <a class="btn" href="https://htmlacademy.ru">
-          <img src="img/htmlacademy.png" alt="HTML academy">
-        </a>
-      </section>
+      <div class="footer-main">
+        <section class="hashtag">
+          <h3>#Visitsedona</h3>
+        </section>
+        <section class="footer-social">
+          <a class="social-btn social-btn-twitter" href="#">
+            <img src="img/twitter.png" alt="Twitter">
+          </a>
+          <a class="social-btn social-btn-facebook" href="#">
+            <img src="img/facebook.png" alt="Facebook">
+          </a>
+          <a class="social-btn social-btn-youtube" href="#">
+            <img src="img/youtube.png" alt="Youtube">
+          </a>
+        </section>
+        <section class="footer-copyright">
+          <span class="html-academy">Website by</span>
+          <a class="btn" href="https://htmlacademy.ru">
+            <img src="img/htmlacademy.png" alt="HTML academy">
+          </a>
+        </section>
+      </div>
     </footer>
   </body>
 </html>
