--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header class="main-header">
-      <div class="layout-positioner">
+      <div class="container clearfix">
         <nav class="main-navigation">
           <ul>
             <li class="left-navigation">
@@ -30,7 +30,7 @@
         </div>
       </div>
     </header>
-    <main class="layout-positioner">
+    <main class="container clearfix">
       <form class="search-form" action="#" method="post">
         <h2 class="minor-header-left">Инфраструктура:</h2>
         <label for="pool">Бассейн</label>
@@ -117,8 +117,8 @@
         </article>
       </div>
     </main>
-    <footer class="layout-positioner">
-      <div class="footer-main">
+    <footer class="container">
+      <div class="footer-main clearfix">
         <section class="hashtag">
           <h3>#Visitsedona</h3>
         </section>
