--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
   </head>
   <body>
     <header class="main-header">
-      <div class="layout-positioner">
+      <div class="container clearfix">
         <nav class="main-navigation">
           <ul>
-            <li class="left-navigation">
+            <li class="navigation-element left-navigation">
               <a href="#">Информация</a>
             </li>
-            <li class="left-navigation">
+            <li class="navigation-element left-navigation">
               <a href="#">Фото и видео</a>
             </li>
-            <li class="right-navigation">
+            <li class="navigation-element right-navigation">
               <a href="#">Карта штата</a>
             </li>
-            <li class="right-navigation">
+            <li class="navigation-element right-navigation">
               <a href="#">Гостиницы</a>
           </ul>
         </nav>
@@ -30,7 +30,7 @@
         </div>
       </div>
     </header>
-    <main class="layout-positioner">
+    <main class="container clearfix">
       <div class="promo-picture">
         <img src ="img/mainphoto.png" alt="О Седоне">
       </div>
@@ -38,7 +38,7 @@
         <h3>Седона - небольшой городок в Аризоне, заслуживающий большего</h3>
         <span class="promo-speech"> Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</span>
       </div>
-      <div class="reason-picture">
+      <div class="reason-picture clearfix">
         <div class="picture-description">
           <h4>Настоящий городок</h4>
           <div>-№1-</div>
@@ -48,7 +48,7 @@
             <img src ="img/usaflag.jpg" alt="Город">
           </div>
       </div>
-      <section class="reason-list">
+      <section class="reason-list clearfix">
         <div class="reason-point">
           <img src ="img/house.png" alt="Жилье">
           <h5>Жилье</h5>
@@ -65,17 +65,17 @@
           <p>Не только китайского, но и местного производства!</p>
         </div>
       </section>
-      <div class="reason-picture1">
-         <div class="picture-description1">
+      <div class="reason-picture-reverse">
+         <div class="picture-description-reverse">
            <h4>Там есть мост дьявола!</h4>
            <div>-№2-</div>
            <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
         </div>
-          <div class="picture1">
+          <div class="picture-reverse">
             <img src ="img/mountains.jpg" alt="Горы">
           </div>
       </div>
-      <section class="reason-list1">
+      <section class="reason-list1 clearfix">
         <div class="reason-point1">
           <h5>Небольшая площадь</h5>
           <div>-№3-</div>
@@ -111,12 +111,12 @@
           </form>
         </div>
     </main>
-    <footer class="layout-positioner">
+    <footer class="container">
       <div class="footer-main">
         <section class="hashtag">
           <h3>#Visitsedona</h3>
         </section>
-        <section class="footer-social">
+        <section class="footer-social clearfix">
           <a class="social-btn social-btn-twitter" href="#">
             <img src="img/twitter.png" alt="Twitter">
           </a>
