--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
   </head>
   <body>
     <header class="main-header">
-      <div class="container clearfix">
+      <div class="container">
         <nav class="main-navigation">
           <ul>
-            <li class="navigation-element left-navigation">
+            <li class="navigation-element left-navigation clearfix">
               <a href="#">Информация</a>
             </li>
             <li class="navigation-element left-navigation">
               <a href="#">Фото и видео</a>
             </li>
             <li class="navigation-element right-navigation">
-              <a href="#">Карта штата</a>
+              <a href="#">Гостиницы</a>
             </li>
             <li class="navigation-element right-navigation">
-              <a href="#">Гостиницы</a>
+              <a href="#">Карта штата</a>
           </ul>
         </nav>
         <div class="index-logo">
@@ -30,14 +30,14 @@
         </div>
       </div>
     </header>
-    <main class="container clearfix">
+    <main class="container">
       <div class="promo-picture">
-        <img src ="img/mainphoto.png" alt="О Седоне">
       </div>
-      <div class="promo">
-        <h3>Седона - небольшой городок в Аризоне, заслуживающий большего</h3>
-        <span class="promo-speech"> Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</span>
-      </div>
+      <div class="promo-block">
+        <div class="promo">
+          <h3>Седона - небольшой городок в Аризоне, заслуживающий большего</h3>
+          <span class="promo-speech"> Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</span>
+        </div>
       <div class="reason-picture clearfix">
         <div class="picture-description">
           <h4>Настоящий городок</h4>
@@ -65,7 +65,7 @@
           <p>Не только китайского, но и местного производства!</p>
         </div>
       </section>
-      <div class="reason-picture-reverse">
+      <div class="reason-picture-reverse clearfix">
          <div class="picture-description-reverse">
            <h4>Там есть мост дьявола!</h4>
            <div>-№2-</div>
@@ -75,26 +75,28 @@
             <img src ="img/mountains.jpg" alt="Горы">
           </div>
       </div>
-      <section class="reason-list1 clearfix">
-        <div class="reason-point1">
+      <section class="reason-list-nopicture clearfix">
+        <div class="reason-point-nopicture">
           <h5>Небольшая площадь</h5>
           <div>-№3-</div>
           <p>Все достопримечательности находятся очень близко</p>
         </div>
-        <div class="reason-point1">
+        <div class="reason-point-nopicture">
           <h5>Красивая дорога</h5>
           <div>-№4-</div>
           <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </div>
-        <div class="reason-point1">
+        <div class="reason-point-nopicture">
           <h5>Мало туристов</h5>
           <div>-№5-</div>
           <p>Большинство едет в Гранд Каньон и толпится там</p>
         </div>
       </section>
-      <section class="if-interest">
-        <span class="main-question">Заинтересовались?</span>
-        <p class="to-do">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <section class="if-interest-block">
+        <div class="if-interest-content">
+          <span class="main-question">Заинтересовались?</span>
+          <p class="to-do">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        </div>
       </section>
       <div class="search-block">
           <h6>Поиск гостиницы в Седоне</h6>
@@ -112,7 +114,7 @@
         </div>
     </main>
     <footer class="container">
-      <div class="footer-main">
+      <div class="footer-main clearfix">
         <section class="hashtag">
           <h3>#Visitsedona</h3>
         </section>
