--- a/catalog.html
+++ b/catalog.html
@@ -67,53 +67,81 @@
             <a href="#">По рейтингу</a>
           </li>
         </ul>
-        <div class="search-button clearfix">
           <a class="up-button" href="#">Вверх</a>
           <a class="down-button" href="#">Вниз</a>
-        </div>
       </div>
       <div class="search-show">
-        <article>
-          <h3>Amara resort & spa</h3>
-          <div class="article-info">Гостиница</div>
-          <div class="article-info">От 4000 р.</div>
-          <img class="article-img" src="img/hotel3.jpg" alt="Фото">
-          <a class="btn more-btn">Подробнее</a>
-          <a class="btn book-btn">Забронировать</a>
-          <span class="rate">Рейтинг: 8,5</span>
-          <ul class="stars">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-          </ul>
+        <article class="hotel-type clearfix">
+          <div class="left-article-type clearfix">
+            <div class="hotel-image">
+              <img class="article-img" src="img/hotel3.jpg" alt="Фото">
+            </div>
+            <div class="hotel-description">
+              <h3>Amara resort & spa</h3>
+              <div>
+                <div class="article-info">Гостиница</div>
+                <div class="article-price">От 4000 р.</div>
+              </div>
+              <a class="btn more-btn">Подробнее</a>
+              <a class="btn book-btn">Забронировать</a>
+            </div>
+          </div>
+          <div class="right-article-type">
+            <ul class="stars">
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+            <span class="rate">Рейтинг: 8,5</span>
+          </div>
         </article>
-        <article>
-          <h3>Desert quail inn</h3>
-          <div class="article-info">Мотель</div>
-          <div class="article-info">От 3000 р.</div>
-          <img class="article-img" src="img/hotel2.jpg" alt="Фото">
-          <a class="btn more-btn">Подробнее</a>
-          <a class="btn book-btn">Забронировать</a>
-          <span class="rate">Рейтинг: 8,9</span>
-          <ul class="stars">
-            <li></li>
-            <li></li>
-            <li></li>
-          </ul>
+        <article class="hotel-type clearfix">
+          <div class="left-article-type clearfix">
+            <div class ="hotel-image">
+              <img class="article-img" src="img/hotel2.jpg" alt="Фото">
+            </div>
+            <div class="hotel-description">
+              <h3>Desert quail inn</h3>
+              <div>
+                <div class="article-info">Мотель</div>
+                <div class="article-price">От 3000 р.</div>
+              </div>
+              <a class="btn more-btn">Подробнее</a>
+              <a class="btn book-btn">Забронировать</a>
+            </div>
+          </div>
+          <div class="right-article-type">
+            <ul class="stars">
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+            <span class="rate">Рейтинг: 8,9</span>
+          </div>
         </article>
-        <article>
-          <h3>Villas at poco diablo</h3>
-          <div class="article-info">Апартаменты</div>
-          <div class="article-info">От 2000 р.</div>
-          <img class="article-img" src="img/hotel1.jpg" alt="Фото">
-          <a class="btn more-btn">Подробнее</a>
-          <a class="btn book-btn">Забронировать</a>
-          <span class="rate">Рейтинг: 9,2</span>
-          <ul class="stars">
-            <li></li>
-            <li></li>
-          </ul>
+        <article class="hotel-type clearfix">
+          <div class="left-article-type clearfix">
+            <div class="hotel-image">
+              <img class="article-img" src="img/hotel1.jpg" alt="Фото">
+            </div>
+            <div class="hotel-description">
+              <h3>Villas at poco diablo</h3>
+              <div>
+                <div class="article-info">Апартаменты</div>
+                <div class="article-price">От 2000 р.</div>
+              </div>
+              <a class="btn more-btn">Подробнее</a>
+              <a class="btn book-btn">Забронировать</a>
+            </div>
+          </div>
+          <div class="right-article-type">
+            <ul class="stars">
+              <li></li>
+              <li></li>
+            </ul>
+            <span class="rate">Рейтинг: 9,2</span>
+          </div>
         </article>
       </div>
     </main>
