--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <body>
     <header class="main-header">
       <div class="container">
-        <nav class="main-navigation clearfix">
-          <ul>
-            <li class="navigation-element left-navigation clearfix">
+        <nav class="main-navigation">
+          <ul class="clearfix">
+            <li class="navigation-element left-navigation">
               <a href="#">Информация</a>
             </li>
             <li class="navigation-element left-navigation">
