--- a/catalog.html
+++ b/catalog.html
@@ -4,13 +4,15 @@
     <meta charset="utf-8">
     <title>Седона</title>
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
       <div class="container">
         <nav class="main-navigation">
-          <ul>
-            <li class="navigation-element left-navigation clearfix">
+          <ul class="clearfix">
+            <li class="navigation-element left-navigation">
               <a href="#">Информация</a>
             </li>
             <li class="navigation-element left-navigation">
