--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Седона</title>
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
@@ -34,60 +36,59 @@
       <div class="promo-picture">
       </div>
       <div class="promo-block">
-        <div class="promo">
-          <h3>Седона - небольшой городок в Аризоне, заслуживающий большего</h3>
-          <span class="promo-speech"> Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</span>
-        </div>
-      <div class="reason-picture clearfix">
+          <h1>Седона - небольшой городок в Аризоне, заслуживающий большего</h3>
+          <span class="promo-speech"> Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</span>
+      </div>
+      <div class="picture-reason">
         <div class="picture-description">
-          <h4>Настоящий городок</h4>
+          <h2 class="picture-header">Настоящий городок</h2>
           <div>-№1-</div>
-          <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
+          <p class="picture-text">Седона - не аттракцион для туристов, там течет своя жизнь</p>
         </div>
           <div class="picture">
             <img src ="img/usaflag.jpg" alt="Город">
           </div>
       </div>
-      <section class="reason-list clearfix">
+      <section class="reason-list">
         <div class="reason-point">
           <img src ="img/house.png" alt="Жилье">
-          <h5>Жилье</h5>
-          <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+          <h2>Жилье</h2>
+          <span>Рекомендуем пожить в настоящем мотеле, все как в кино!</span>
         </div>
         <div class="reason-point">
           <img src ="img/food.png" alt="Еда">
-          <h5>Еда</h5>
-          <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+          <h2>Еда</h2>
+          <span>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</span>
         </div>
         <div class="reason-point">
           <img src ="img/present.png" alt="Сувениры">
-          <h5>Сувениры</h5>
-          <p>Не только китайского, но и местного производства!</p>
+          <h2>Сувениры</h2>
+          <span>Не только китайского, но и местного производства!</span>
         </div>
       </section>
-      <div class="reason-picture-reverse clearfix">
+      <div class="picture-reason-reverse">
          <div class="picture-description-reverse">
-           <h4>Там есть мост дьявола!</h4>
+           <h2 class="picture-header-reverse">Там есть мост дьявола</h2>
            <div>-№2-</div>
-           <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+           <p class="picture-text-reverse">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
         </div>
-          <div class="picture-reverse">
+          <div class="picture">
             <img src ="img/mountains.jpg" alt="Горы">
           </div>
       </div>
-      <section class="reason-list-nopicture clearfix">
+      <section class="reason-list-nopicture">
         <div class="reason-point-nopicture">
-          <h5>Небольшая площадь</h5>
+          <h2>Небольшая площадь</h2>
           <div>-№3-</div>
           <p>Все достопримечательности находятся очень близко</p>
         </div>
         <div class="reason-point-nopicture">
-          <h5>Красивая дорога</h5>
+          <h2>Красивая дорога</h2>
           <div>-№4-</div>
           <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </div>
         <div class="reason-point-nopicture">
-          <h5>Мало туристов</h5>
+          <h2>Мало туристов</h2>
           <div>-№5-</div>
           <p>Большинство едет в Гранд Каньон и толпится там</p>
         </div>
