--- a/index.html
+++ b/index.html
@@ -123,24 +123,18 @@
       </div>
     </main>
     <footer class="container">
-      <div class="footer-main clearfix">
+      <div class="footer-main">
         <section class="hashtag">
           <h3>#Visitsedona</h3>
         </section>
         <section class="footer-social">
-          <a class="social-btn social-btn-twitter" href="#">
-            <img src="img/twitter.png" alt="Twitter">
-          </a>
-          <a class="social-btn social-btn-facebook" href="#">
-            <img src="img/facebook.png" alt="Facebook">
-          </a>
-          <a class="social-btn social-btn-youtube" href="#">
-            <img src="img/youtube.png" alt="Youtube">
-          </a>
+          <a class="social-btn social-btn-twitter" href="#">Twitter</a>
+          <a class="social-btn social-btn-facebook" href="#">Facebook</a>
+          <a class="social-btn social-btn-youtube" href="#">Youtube</a>
         </section>
         <section class="footer-copyright">
           <span class="html-academy">Website by</span>
-          <a class="btn" href="https://htmlacademy.ru">
+          <a class="copyright-img" href="https://htmlacademy.ru">
             <img src="img/htmlacademy.png" alt="HTML academy">
           </a>
         </section>
