--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </section>
       <div class="search-block">
         <div class="search-basis">
-          <h6 class="search-name">Поиск гостиницы в Седоне</h6>
+          <h3 class="search-name">Поиск гостиницы в Седоне</h3>
           <form class="search-form" action="#" method="post">
             <div class="search-row search-first-row">
               <label for="date-in">Дата заезда:</label>
@@ -117,7 +117,9 @@
               <label for="children">Дети:</label>
               <input type="number" id="children" name="children" max="100" min="1" value="0">
             </div>
+            <div>
               <input type="submit" value="Найти">
+            </div>
           </form>
         </div>
       </div>
@@ -125,7 +127,7 @@
     <footer class="container">
       <div class="footer-main">
         <section class="hashtag">
-          <h3>#Visitsedona</h3>
+          <span>#Visitsedona</span>
         </section>
         <section class="footer-social">
           <a class="social-btn social-btn-twitter" href="#">Twitter</a>
